edited some text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,8 @@
 
 
 /* Reset */
+.synopsis{font-color:red;}
+
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
@@ -2466,7 +2468,10 @@
 			height: 100%;
 			vertical-align: middle;
 		}
-
+       .feature .Synopsis{
+       	font-size: 17px;
+       	
+       }
 		.feature .content {
 			display: inline-block;
 			padding: 3.5em;
@@ -2976,8 +2981,7 @@
 				height: auto;
 				margin-bottom: 2em;
 			}
-			.synopsis{
-			}
+
 
 				.feature:last-child {
 					margin-bottom: 0;
